--- a/chrome-app/app/sass/mini.sass
+++ b/chrome-app/app/sass/mini.sass
@@ -1,38 +1,36 @@
+@import compass
+
 html
   height: 100%
 
 body
-  margin: 0
+  margin: 6px
   height: 100%
-  background: #6441a5
+  background-color: #6441a5
   overflow: hidden
-  -webkit-app-region: drag
-  cursor: move
 
 .twitch-logo
-  position: absolute
-  left: 15px
-  top: 15px
-  z-index: 10
-  opacity: 0.8
+  padding: 7px 13px
   path
     fill: white
 
-.expand
-  position: absolute
-  left: 15px
-  top: 15px
-  padding: 5px
+.button
+  padding: 8px
+  padding-top: 5px
+  float: left
   font-size: 20px
   color: white
   cursor: pointer
+  opacity: 0.8
   display: none
+  &:hover
+    opacity: 1
 
-  i
-    margin-left: 2px
+  &.drag
+    -webkit-app-region: drag
 
 body:hover
   .twitch-logo
     display: none
-  .expand
+  .button
     display: block
