--- a/chrome-app/app/sass/player.sass
+++ b/chrome-app/app/sass/player.sass
@@ -4,14 +4,16 @@ html
 body
   margin: 0
   height: 100%
-  background: black
   overflow: hidden
-  -webkit-app-region: drag
-  cursor: move
 
 .player
   position: fixed
   top: 0
   left: 0
   width: 100%
-  height: 100%
+  height: calc(100% + 29px)
+  transition: top .10s ease-in-out
+
+body:hover
+  .player
+    top: -29px
