--- a/chrome-app/app/sass/player.sass
+++ b/chrome-app/app/sass/player.sass
@@ -11,9 +11,5 @@ body
   top: 0
   left: 0
   width: 100%
-  height: calc(100% + 31px)
+  height: 100%
   transition: top .10s ease-in-out
-
-body:hover
-  .player
-    top: -31px
